--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "walnew",
   "description": "A Secure DucatusCoin Wallet",
   "author": "BitPay",
-  "version": "2.6.2",
+  "version": "2.6.5",
   "keywords": [
     "ducatus",
     "bitcoin",
@@ -130,7 +130,7 @@
     "buffer-compare": "1.1.1",
     "chart.js": "2.8.0",
     "cordova": "8.1.2",
-    "cordova-android": "^7.1.4",
+    "cordova-android": "7.1.4",
     "cordova-clipboard": "^1.3.0",
     "cordova-custom-config": "github:cmgustavo/cordova-custom-config#3a1902fb700dc8c1e9ac9db592aa48d7d900cde0",
     "cordova-ios": "5.1.1",
