--- a/app-template/walnew/appConfig.json
+++ b/app-template/walnew/appConfig.json
@@ -6,7 +6,7 @@
   "themeColor": "#862633",
   "userVisibleName": "DucatusWallet",
   "purposeLine": "DucatusCoin Wallet",
-  "bundleName": "walnew",
+  "bundleName": "ducatuswallet",
   "appUri": "walnew",
   "name": "walnew",
   "nameNoSpace": "walnew",
@@ -24,7 +24,7 @@
   "WindowsApplicationId": "804636ee-b017-4cad-8719-e58ac97ffa5c",
   "pushSenderId": "1036948132229",
   "description": "A Secure DucatusCoin Wallet",
-  "version": "2.6.5",
+  "version": "2.6.4",
   "androidVersion": "70097000",
   "_extraCSS": null,
   "_enabledExtensions": {
